@@ -2,6 +2,7 @@ name = File-DataClass
 
 [Prereqs]
 perl              = 5.010001
+boolean           = 0.45
 namespace::autoclean = 0.22
 namespace::clean  = 0.25
 Cache::FastMmap   = 1.40
