@@ -2,7 +2,6 @@ package File::DataClass::ResultSet;
 
 use namespace::autoclean;
 
-use Moo;
 use File::DataClass::Constants qw( EXCEPTION_CLASS FALSE TRUE );
 use File::DataClass::Functions qw( is_arrayref is_hashref is_member throw );
 use File::DataClass::List;
@@ -12,6 +11,7 @@ use File::DataClass::Types     qw( ArrayRef ClassName
 use Scalar::Util               qw( blessed );
 use Subclass::Of;
 use Unexpected::Functions      qw( RecordNotFound Unspecified );
+use Moo;
 
 my $class_stash = {};
 
