@@ -1,5 +1,6 @@
 Revision history for File::DataClass
 
+          - Use boolean to reboolify JSON data when reading. mst++
           - Added IO::sibling and IO::visit
           - Added IO::child
           - Removed HashMerge. Renamed merge to merge_for_update
